--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -41,48 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Players</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>576</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Total Players\n",
-       "0            576"
+       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price'], dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +66,8 @@
     "players_df = pd.DataFrame(players_count_summary)\n",
     "players_df\n",
     "\n",
-    "#displaying column names\n"
+    "#displaying column names\n",
+    "#purchase_data.columns"
    ]
   },
   {
@@ -228,13 +197,9 @@
    "source": [
     "* Percentage and Count of Male Players\n",
     "\n",
-    "\n",
     "* Percentage and Count of Female Players\n",
     "\n",
-    "\n",
-    "* Percentage and Count of Other / Non-Disclosed\n",
-    "\n",
-    "\n"
+    "* Percentage and Count of Other / Non-Disclosed\n"
    ]
   },
   {
@@ -242,7 +207,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create df for unique players\n",
+    "unique_players_df\n",
+    "#male count (Total Count: 484, 84.03%)\n",
+    "\n",
+    "#female count (Total Count: 81, 14.06%)\n",
+    "\n",
+    "#other (Total Count: 11, 1.91%)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -275,7 +248,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#female (purchase count: 113, Avg price: $3.20, Total purchase: $361.94)\n",
+    "#avg total per person: $4.47\n",
+    "\n",
+    "#male (purchase count: 652, Avg price: $3.02, Total purchase: $1967.64)\n",
+    "#avg total per person: $4.07\n",
+    "\n",
+    "#other (purchase count: 15, Avg price: $3.35, Total purchase: $50.19)\n",
+    "#avg total per person: $4.56"
+   ]
   },
   {
    "cell_type": "markdown",
