--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,9 +10,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>775</td>\n",
+       "      <td>Aethedru70</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Wolf</td>\n",
+       "      <td>3.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>776</td>\n",
+       "      <td>Iral74</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>164</td>\n",
+       "      <td>Exiled Doomblade</td>\n",
+       "      <td>1.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>777</td>\n",
+       "      <td>Yathecal72</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
+       "      <td>3.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>778</th>\n",
+       "      <td>778</td>\n",
+       "      <td>Sisur91</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>779</th>\n",
+       "      <td>779</td>\n",
+       "      <td>Ennrian78</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Dawn</td>\n",
+       "      <td>4.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>780 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Purchase ID             SN  Age  Gender  Item ID  \\\n",
+       "0              0        Lisim78   20    Male      108   \n",
+       "1              1    Lisovynya38   40    Male      143   \n",
+       "2              2     Ithergue48   24    Male       92   \n",
+       "3              3  Chamassasya86   24    Male      100   \n",
+       "4              4      Iskosia90   23    Male      131   \n",
+       "..           ...            ...  ...     ...      ...   \n",
+       "775          775     Aethedru70   21  Female       60   \n",
+       "776          776         Iral74   21    Male      164   \n",
+       "777          777     Yathecal72   20    Male       67   \n",
+       "778          778        Sisur91    7    Male       92   \n",
+       "779          779      Ennrian78   24    Male       50   \n",
+       "\n",
+       "                                     Item Name  Price  \n",
+       "0    Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                            Frenzied Scimitar   1.56  \n",
+       "2                                 Final Critic   4.88  \n",
+       "3                                  Blindscythe   3.27  \n",
+       "4                                         Fury   1.44  \n",
+       "..                                         ...    ...  \n",
+       "775                                       Wolf   3.54  \n",
+       "776                           Exiled Doomblade   1.63  \n",
+       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
+       "778                               Final Critic   4.19  \n",
+       "779                                       Dawn   4.60  \n",
+       "\n",
+       "[780 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -22,7 +203,9 @@
     "file_to_load = \"Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)"
+    "purchase_data = pd.read_csv(file_to_load)\n",
+    "\n",
+    "purchase_data"
    ]
   },
   {
@@ -41,16 +224,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['Purchase ID', 'SN', 'Age', 'Gender', 'Item ID', 'Item Name', 'Price'], dtype='object')"
+       "   Total Players\n",
+       "0            576"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -144,7 +359,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,12 +419,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>467</th>\n",
+       "      <td>467</td>\n",
+       "      <td>Adairialis76</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>123</td>\n",
+       "      <td>Twilight's Carver</td>\n",
+       "      <td>2.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>142</td>\n",
+       "      <td>Adastirin33</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Woeful Adamantite Claymore</td>\n",
+       "      <td>4.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>388</th>\n",
+       "      <td>388</td>\n",
+       "      <td>Aeda94</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>128</td>\n",
+       "      <td>Blazeguard, Reach of Eternity</td>\n",
+       "      <td>4.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Aela59</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>119</td>\n",
+       "      <td>Stormbringer, Dark Blade of Ending Misery</td>\n",
+       "      <td>4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630</th>\n",
+       "      <td>630</td>\n",
+       "      <td>Aelaria33</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>171</td>\n",
+       "      <td>Scalpel</td>\n",
+       "      <td>1.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>340</td>\n",
+       "      <td>Yastyriaphos75</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Orbit</td>\n",
+       "      <td>4.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>257</th>\n",
+       "      <td>257</td>\n",
+       "      <td>Yasur35</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Woeful Adamantite Claymore</td>\n",
+       "      <td>4.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>514</td>\n",
+       "      <td>Yasur85</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Souleater</td>\n",
+       "      <td>1.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>777</th>\n",
+       "      <td>777</td>\n",
+       "      <td>Yathecal72</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
+       "      <td>3.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>572</td>\n",
+       "      <td>Yoishirrala98</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>145</td>\n",
+       "      <td>Fiery Glass Crusader</td>\n",
+       "      <td>4.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>414 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Purchase ID              SN  Age  Gender  Item ID  \\\n",
+       "467          467    Adairialis76   16    Male      123   \n",
+       "142          142     Adastirin33   35  Female      175   \n",
+       "388          388          Aeda94   17    Male      128   \n",
+       "28            28          Aela59   21    Male      119   \n",
+       "630          630       Aelaria33   23    Male      171   \n",
+       "..           ...             ...  ...     ...      ...   \n",
+       "340          340  Yastyriaphos75   22    Male       41   \n",
+       "257          257         Yasur35   26    Male      175   \n",
+       "514          514         Yasur85   21    Male       21   \n",
+       "777          777      Yathecal72   20    Male       67   \n",
+       "572          572   Yoishirrala98   17  Female      145   \n",
+       "\n",
+       "                                     Item Name  Price  \n",
+       "467                          Twilight's Carver   2.28  \n",
+       "142                 Woeful Adamantite Claymore   4.48  \n",
+       "388              Blazeguard, Reach of Eternity   4.91  \n",
+       "28   Stormbringer, Dark Blade of Ending Misery   4.32  \n",
+       "630                                    Scalpel   1.79  \n",
+       "..                                         ...    ...  \n",
+       "340                                      Orbit   4.75  \n",
+       "257                 Woeful Adamantite Claymore   4.48  \n",
+       "514                                  Souleater   1.10  \n",
+       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
+       "572                       Fiery Glass Crusader   4.58  \n",
+       "\n",
+       "[414 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#create df for unique players\n",
+    "sorted_df = purchase_data.sort_values('SN')\n",
+    "unique_players_df = sorted_df.drop_duplicates(subset='SN', keep='first')\n",
     "unique_players_df\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#merged_df = pd.merge(unique_players_df, purchase_data, on='SN')\n",
+    "\n",
+    "#merged_df_dropped = merged_df.dropna(how='any')\n",
+    "\n",
+    "#merged_df_dropped\n",
+    "\n",
     "#male count (Total Count: 484, 84.03%)\n",
     "\n",
     "#female count (Total Count: 81, 14.06%)\n",
@@ -245,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
