--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "0            576"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -359,7 +359,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -443,186 +443,91 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>467</th>\n",
-       "      <td>467</td>\n",
-       "      <td>Adairialis76</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>123</td>\n",
-       "      <td>Twilight's Carver</td>\n",
-       "      <td>2.28</td>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>8403.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>142</th>\n",
-       "      <td>142</td>\n",
-       "      <td>Adastirin33</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>175</td>\n",
-       "      <td>Woeful Adamantite Claymore</td>\n",
-       "      <td>4.48</td>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>1406.00%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>388</th>\n",
-       "      <td>388</td>\n",
-       "      <td>Aeda94</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>128</td>\n",
-       "      <td>Blazeguard, Reach of Eternity</td>\n",
-       "      <td>4.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Aela59</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>119</td>\n",
-       "      <td>Stormbringer, Dark Blade of Ending Misery</td>\n",
-       "      <td>4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>630</th>\n",
-       "      <td>630</td>\n",
-       "      <td>Aelaria33</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>171</td>\n",
-       "      <td>Scalpel</td>\n",
-       "      <td>1.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>340</th>\n",
-       "      <td>340</td>\n",
-       "      <td>Yastyriaphos75</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Orbit</td>\n",
-       "      <td>4.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>257</th>\n",
-       "      <td>257</td>\n",
-       "      <td>Yasur35</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>175</td>\n",
-       "      <td>Woeful Adamantite Claymore</td>\n",
-       "      <td>4.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>514</th>\n",
-       "      <td>514</td>\n",
-       "      <td>Yasur85</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Souleater</td>\n",
-       "      <td>1.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>777</th>\n",
-       "      <td>777</td>\n",
-       "      <td>Yathecal72</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Celeste, Incarnation of the Corrupted</td>\n",
-       "      <td>3.46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>572</th>\n",
-       "      <td>572</td>\n",
-       "      <td>Yoishirrala98</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>145</td>\n",
-       "      <td>Fiery Glass Crusader</td>\n",
-       "      <td>4.58</td>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>11</td>\n",
+       "      <td>191.00%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>414 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Purchase ID              SN  Age  Gender  Item ID  \\\n",
-       "467          467    Adairialis76   16    Male      123   \n",
-       "142          142     Adastirin33   35  Female      175   \n",
-       "388          388          Aeda94   17    Male      128   \n",
-       "28            28          Aela59   21    Male      119   \n",
-       "630          630       Aelaria33   23    Male      171   \n",
-       "..           ...             ...  ...     ...      ...   \n",
-       "340          340  Yastyriaphos75   22    Male       41   \n",
-       "257          257         Yasur35   26    Male      175   \n",
-       "514          514         Yasur85   21    Male       21   \n",
-       "777          777      Yathecal72   20    Male       67   \n",
-       "572          572   Yoishirrala98   17  Female      145   \n",
-       "\n",
-       "                                     Item Name  Price  \n",
-       "467                          Twilight's Carver   2.28  \n",
-       "142                 Woeful Adamantite Claymore   4.48  \n",
-       "388              Blazeguard, Reach of Eternity   4.91  \n",
-       "28   Stormbringer, Dark Blade of Ending Misery   4.32  \n",
-       "630                                    Scalpel   1.79  \n",
-       "..                                         ...    ...  \n",
-       "340                                      Orbit   4.75  \n",
-       "257                 Woeful Adamantite Claymore   4.48  \n",
-       "514                                  Souleater   1.10  \n",
-       "777      Celeste, Incarnation of the Corrupted   3.46  \n",
-       "572                       Fiery Glass Crusader   4.58  \n",
-       "\n",
-       "[414 rows x 7 columns]"
+       "                       Total Count Percentage of Players\n",
+       "Male                           484              8403.00%\n",
+       "Female                          81              1406.00%\n",
+       "Other / Non-Disclosed           11               191.00%"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#create df for unique players\n",
-    "sorted_df = purchase_data.sort_values('SN')\n",
-    "unique_players_df = sorted_df.drop_duplicates(subset='SN', keep='first')\n",
+    "unique_players_df = sorted_df.drop_duplicates(subset = [\"SN\"])\n",
     "unique_players_df\n",
+    "total_unique_players = len(unique_players_df)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#merged_df = pd.merge(unique_players_df, purchase_data, on='SN')\n",
-    "\n",
-    "#merged_df_dropped = merged_df.dropna(how='any')\n",
-    "\n",
-    "#merged_df_dropped\n",
+    "#set new index\n",
+    "gender_index_df = unique_players_df.set_index('Gender')\n",
     "\n",
     "#male count (Total Count: 484, 84.03%)\n",
+    "remove_female_players = gender_index_df.drop(index = 'Female')\n",
+    "remove_other_players = remove_female_players.drop(index = 'Other / Non-Disclosed')\n",
+    "remove_other_players\n",
+    "male_count = len(remove_other_players)\n",
+    "male_count\n",
+    "male_percent = male_count/total_unique_players * 100\n",
+    "male_percent_rounded = np.round(male_percent, decimals = 2)\n",
+    "male_percent_rounded\n",
     "\n",
     "#female count (Total Count: 81, 14.06%)\n",
+    "remove_male_players = gender_index_df.drop(index = 'Male')\n",
+    "remove_other_players_2 = remove_male_players.drop(index = 'Other / Non-Disclosed')\n",
+    "remove_other_players_2\n",
+    "female_count = len(remove_other_players_2)\n",
+    "female_count\n",
+    "female_percent = female_count/total_unique_players * 100\n",
+    "female_percent_rounded = np.round(female_percent, decimals = 2)\n",
+    "female_percent_rounded\n",
     "\n",
-    "#other (Total Count: 11, 1.91%)\n"
+    "#other (Total Count: 11, 1.91%)\n",
+    "remove_male_players_2 = gender_index_df.drop(index = 'Male')\n",
+    "remove_female_players_2 = remove_male_players_2.drop(index = 'Female')\n",
+    "remove_female_players_2\n",
+    "other_count = len(remove_female_players_2)\n",
+    "other_count\n",
+    "other_percent = other_count/total_unique_players * 100\n",
+    "other_percent_rounded = np.round(other_percent, decimals = 2)\n",
+    "other_percent_rounded\n",
+    "\n",
+    "#create summary table\n",
+    "gender_data = {'Total Count':[male_count, female_count, other_count], \n",
+    "               'Percentage of Players': [male_percent_rounded, female_percent_rounded, other_percent_rounded]}\n",
+    "gender_df = pd.DataFrame(gender_data, index = ['Male', 'Female', 'Other / Non-Disclosed'])\n",
+    "\n",
+    "\n",
+    "#format summary table\n",
+    "gender_df['Percentage of Players']= gender_df['Percentage of Players'].map(\"{:.2%}\".format)\n",
+    "\n",
+    "gender_df"
    ]
   },
   {
