--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "[780 rows x 7 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "0            576"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "metadata": {
     "scrolled": true
    },
@@ -359,7 +359,7 @@
        "0                     179         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -451,30 +451,30 @@
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>484</td>\n",
-       "      <td>8403.00%</td>\n",
+       "      <td>84.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Female</th>\n",
        "      <td>81</td>\n",
-       "      <td>1406.00%</td>\n",
+       "      <td>14.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>11</td>\n",
-       "      <td>191.00%</td>\n",
+       "      <td>1.91</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       Total Count Percentage of Players\n",
-       "Male                           484              8403.00%\n",
-       "Female                          81              1406.00%\n",
-       "Other / Non-Disclosed           11               191.00%"
+       "                       Total Count  Percentage of Players\n",
+       "Male                           484                  84.03\n",
+       "Female                          81                  14.06\n",
+       "Other / Non-Disclosed           11                   1.91"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,10 +524,11 @@
     "gender_df = pd.DataFrame(gender_data, index = ['Male', 'Female', 'Other / Non-Disclosed'])\n",
     "\n",
     "\n",
-    "#format summary table\n",
-    "gender_df['Percentage of Players']= gender_df['Percentage of Players'].map(\"{:.2%}\".format)\n",
+    "#gender_df['Percentage of Players']= gender_df['Percentage of Players'].map(\"{:.2%}\".format)\n",
     "\n",
-    "gender_df"
+    "gender_df\n",
+    "\n",
+    "######format summary table########"
    ]
   },
   {
@@ -558,18 +559,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set index to gender\n",
+    "\n",
+    "gender_index_df_2 = purchase_data.set_index('Gender')\n",
+    "gender_index_df_2\n",
+    "\n",
     "#female (purchase count: 113, Avg price: $3.20, Total purchase: $361.94)\n",
     "#avg total per person: $4.47\n",
+    "female_purchase_df = gender_index_df_2.drop(labels = ['Male', 'Other / Non-Disclosed'])\n",
+    "female_purchase_count = len(female_purchase_df)\n",
+    "female_purchase_count\n",
+    "female_total_purchase = np.sum(female_purchase_df['Price'])\n",
+    "female_total_purchase\n",
+    "female_avg_price = np.mean(female_purchase_df['Price'])\n",
+    "female_avg_price\n",
+    "\n",
     "\n",
     "#male (purchase count: 652, Avg price: $3.02, Total purchase: $1967.64)\n",
     "#avg total per person: $4.07\n",
+    "male_purchase_df = gender_index_df_2.drop(labels = ['Female', 'Other / Non-Disclosed'])\n",
+    "male_purchase_count = len(male_purchase_df)\n",
+    "male_purchase_count\n",
+    "male_total_purchase = np.sum(male_purchase_df['Price'])\n",
+    "male_total_purchase\n",
+    "male_avg_price = np.mean(male_purchase_df['Price'])\n",
+    "male_avg_price\n",
     "\n",
     "#other (purchase count: 15, Avg price: $3.35, Total purchase: $50.19)\n",
-    "#avg total per person: $4.56"
+    "#avg total per person: $4.56\n",
+    "other_purchase_df = gender_index_df_2.drop(labels = ['Male', 'Female'])\n",
+    "other_purchase_count = len(other_purchase_df)\n",
+    "other_purchase_count\n",
+    "other_total_purchase = np.sum(other_purchase_df['Price'])\n",
+    "other_total_purchase\n",
+    "other_avg_price = np.mean(other_purchase_df['Price'])\n",
+    "other_avg_price\n",
+    "\n",
+    "#summary table\n",
+    "gender_purchase_data = {'Purchase Count':[female_purchase_count, male_purchase_count, other_purchase_count], \n",
+    "               'Average Purchase Price': [female_avg_price, male_avg_price, other_avg_price],\n",
+    "                       'Total Purchase Value': [female_total_purchase, male_total_purchase, other_total_purchase]}\n",
+    "gender_purchase_df = pd.DataFrame(gender_data, index = ['Female', 'Male', 'Other / Non-Disclosed'])\n",
+    "\n",
+    "\n",
+    "#### How to find price per person ####"
    ]
   },
   {
@@ -603,10 +640,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tb/284z5t112fdcqbwthgkr8gx40000gp/T/ipykernel_94032/2765065197.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  unique_players_df[\"Age Range\"] = pd.cut(unique_players_df[\"Age\"], bins, labels=group_names, include_lowest= True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20-24    365\n",
+       "15-19    136\n",
+       "25-29    101\n",
+       "30-34     73\n",
+       "35-39     41\n",
+       "10-14     28\n",
+       "<10       23\n",
+       "40+       13\n",
+       "Name: Age Range, dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bins = [0, 9, 14, 19, 24, 29, 34, 39, 1000]\n",
+    "group_names = ['<10', '10-14', '15-19', '20-24', '25-29', '30-34', '35-39', '40+']\n",
+    "unique_players_df[\"Age Range\"] = pd.cut(unique_players_df[\"Age\"], bins, labels=group_names, include_lowest= True)\n",
+    "purchase_data_grouped = unique_players_df.groupby('Age Range')\n",
+    "\n",
+    "purchase_data['Age Range'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
